# graphiti-study

./: .env.example  README.md  agent.py  basic.ipynb  init.ipynb  main.py  pyproject.toml
prompts/: memory_agent_prompt.py
tools/: __init__.py  graphiti_tools.py  math_tools.py
